--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+</head>
+<body>
+
+  <h1> Hello Le Wagon </h1>
+
+</body>
+</html>
